--- a/Django/MySite/Home/templates/Home/home.html
+++ b/Django/MySite/Home/templates/Home/home.html
@@ -3,7 +3,7 @@
 <section class="home s1">
   <div class="main-container">
     <div class="greeting-wrapper">
-      <h1>Hi there, Jasurbek Mamurov's here!</h1>
+      <h1 style="font-size: 50px">Hi there, Jasurbek Mamurov's here!</h1>
       <div class="greeting-info-wrapper">
         <p style="font-size: 20px">An Artificial Intelligence Enthusiast</p>
       </div>
@@ -122,7 +122,49 @@
 </section>
 
 <section class="s1">
-  <div class="main-container">Recent activities</div>
+  <div class="main-container">
+    <br /><br />
+    <h3 style="text-align: center">Recent Activities</h3>
+    <div class="activities-wrapper">
+      <div class="post">
+        <img
+          class="thumbnail"
+          src="{% static 'images/default.jpg'%}"
+          alt="post#1image"
+        />
+        <div class="post-preview">
+          <h6 class="post-title">Post Title</h6>
+          <p class="post-intro">
+            There would be a sentence. Yeap, this text does not mean anything.
+          </p>
+        </div>
+      </div>
+      <div class="post">
+        <img
+          class="thumbnail"
+          src="{% static 'images/default.jpg'%}"
+          alt="post#2image"
+        />
+        <div class="post-preview">
+          <h6 class="post-title">Post Title</h6>
+          <p class="post-intro">
+            There would be a sentence. Yeap, this text does not mean anything.
+          </p>
+      </div>
+      <div class="post">
+        <img
+        class="thumbnail"
+        src="{% static 'images/default.jpg'%}"
+        alt="post#3image"
+      />
+      <div class="post-preview">
+        <h6 class="post-title">Post Title</h6>
+        <p class="post-intro">
+          There would be a sentence. Yeap, this text does not mean anything.
+        </p>
+      </div>
+    </div>
+  </div>
 </section>
 
 <section class="s2">
