--- a/Django/MySite/templates/main.html
+++ b/Django/MySite/templates/main.html
@@ -23,6 +23,12 @@
 
     <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
     <!-- <script src='main.js' ></script> -->
+    <link
+      id="theme-style"
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'styles/blue.css' %}"
+    />
     <style></style>
   </head>
 
