--- a/Django/MySite/staticfiles/styles/app.css
+++ b/Django/MySite/staticfiles/styles/app.css
@@ -1,6 +1,8 @@
 :root {
   --color-sub: #2d2d39;
 
+  --leftColumnColor: #eaeaea;
+
   --homeMainColor: #eaeaea;
   --homeSecondaryColor: #fff;
 
@@ -13,6 +15,8 @@
 
   --previewBg: rgb(251, 249, 243, 0.8);
   --previewShadow: #f0ead6;
+
+  --buttonColor: black;
 }
 /********************/
 /* Home Page Design */
@@ -23,6 +27,10 @@ body {
   margin: 0;
 }
 
+p {
+  color: var(--homeSecondaryText);
+}
+
 .home h1,
 h2,
 h3,
@@ -30,7 +38,7 @@ h4,
 h5,
 h6,
 strong {
-  color: var(--homeText);
+  color: var(--homeMainText);
   font-family: "Sora", sans-serif;
 }
 
@@ -40,7 +48,7 @@ span,
 label,
 input,
 textarea {
-  color: var(--homeText);
+  color: var(--homeMainText);
   font-family: "Nunito", sans-serif;
 }
 
@@ -94,6 +102,16 @@ h6 {
   text-align: center;
   align-content: center;
   min-height: 10em;
+}
+
+#intro-text-1 {
+  font-size: 50px;
+  color: var(--homeSecondaryText);
+}
+
+#intro-text-2 {
+  font-size: 20px;
+  color: var(--homeSecondaryText);
 }
 
 .greeting-info-wrapper {
@@ -172,7 +190,7 @@ h6 {
 
 .left-column {
   border: 1px solid var(--homeBorderColor);
-  background-color: #eaeaea;
+  background-color: var(--leftColumnColor);
   grid-area: left-column;
   display: flex;
   flex-direction: column;
@@ -327,13 +345,82 @@ h6 {
 
 .activities-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 280px);
+  grid-template-columns: repeat(auto-fit, 320px);
+  gap: 30px;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+
+.post {
+  border: 1px solid var(--homeBorderColor);
+  --webkit-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
+  --moz-box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
+  box-shadow: -2px 7px 21px -9px rgba(0, 0, 0, 0.75);
 }
 
 .thumbnail {
   display: block;
   width: 100%;
-  height: 180px;
+  height: 240px;
+  object-fit: cover;
+}
+
+.post-preview {
+  background-color: #fff;
+  padding: 15px;
+}
+
+.post-title {
+  color: black;
+  font-size: 19px;
+  margin: 0;
+  padding-bottom: 10px;
+}
+
+.post-intro {
+  color: #4b5156;
+  font-size: 15px;
+}
+
+#contact-form {
+  display: block;
+  max-width: 600px;
+  margin: 0 auto;
+  border: 1px solid var(--homeBorderColor);
+  padding: 15px;
+  border-radius: 5px;
+  background-color: var(--homeMainColor);
+  margin-bottom: 50px;
+}
+
+#contact-form label {
+  line-height: 2.7em;
+}
+
+#contact-form textarea {
+  min-height: 100px;
+  font-size: 15px;
+}
+
+.input-field {
+  width: 100%;
+  padding: 10px;
+  background-color: var(--homeSecondaryColor);
+  border-radius: 5px;
+  border: 1px solid var(--homeBorderColor);
+  font-size: 15px;
+}
+
+#submit-btn {
+  margin-top: 10px;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  color: #fff;
+  background-color: var(--buttonColor);
+  border: 1px solid white;
+  border-radius: 10px;
+  font-size: 20px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -357,6 +444,14 @@ h6 {
 
   .left-column {
     justify-content: center;
+  }
+
+  #intro-text-1 {
+    font-size: 40px;
+  }
+
+  #intro-text-2 {
+    font-size: 18px;
   }
 }
 
