--- a/Django/MySite/Home/templates/Home/home.html
+++ b/Django/MySite/Home/templates/Home/home.html
@@ -25,10 +25,10 @@
       </div>
       <div class="left-column">
         <div class="theme-options-wrapper">
-          <div id="light-mode" class="theme-dot"></div>
-          <div id="dark-mode" class="theme-dot"></div>
-          <div id="purple-mode" class="theme-dot"></div>
-          <div id="blue-mode" class="theme-dot"></div>
+          <div data-mode="light" id="light-mode" class="theme-dot"></div>
+          <div data-mode="blue" id="blue-mode" class="theme-dot"></div>
+          <div data-mode="purple" id="purple-mode" class="theme-dot"></div>
+          <div data-mode="green" id="green-mode" class="theme-dot"></div>
         </div>
       </div>
       <div class="center-column">
